--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "alum-pink-theme",
   "displayName": "alum pink theme",
   "description": "good theme",
+  "repository": "https://github.com/samepant/Alum-Pink-VS-Code-Theme",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.71.0"
